--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ copyright 2014 Git.Training2
 -->
 
 <head>
-	<title>An example Website Renato</title>
+	<title>A Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@ copyright 2014 Git.Training2
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Some interesting stuff goes here
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Git Training 2014</p>
 	</footer>
 </body>
 </html>
