fb adding some trouble to simple

--- a/simple.html
+++ b/simple.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <!--
 copyright 2014 Git.Training2
-adicionando mudancas antes de conflitos de rebase
+esta mudanca sao da branch bigtrouble
 -->
 
 <head>
-	<title>A very respctfull Website</title>
+	<title>a lots de coisa</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,7 +19,7 @@ adicionando mudancas antes de conflitos de rebase
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just nothing apenas problema
 		</p>
 	</main>
 	<footer class="container">
