mb conflito entre mudancas

--- a/simple.html
+++ b/simple.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <!--
 copyright 2014 Git.Training2
-adicionando mudancas antes de conflitos de rebase
+algumas mudancas boba da master branch
 -->
 
 <head>
-	<title>A very respctfull Website</title>
+	<title>mudanças na Master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,9 +17,10 @@ adicionando mudancas antes de conflitos de rebase
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk Filler Content -->
 		<p>
-			Just some content
+			Just stuff for now
+			sem certeza se poderiamos trocar isto ou nao
 		</p>
 	</main>
 	<footer class="container">
