--- a/simple.html
+++ b/simple.html
@@ -23,7 +23,7 @@ esta mudanca sao da branch bigtrouble
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Git Training 2014</p>
+		<p>&copy; Git Training, all right reserved, this is it ok</p>
 	</footer>
 </body>
 </html>
