--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@ esta mudanca sao da branch bigtrouble
 -->
 
 <head>
-	<title>a lots de coisa</title>
+	<title>stashs</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,8 +18,7 @@ esta mudanca sao da branch bigtrouble
 <body>
 	<main class="container">
 		<p>
-			Just stuff for now
-			sem certeza se poderiamos trocar isto ou nao
+			adding more blabla
 		</p>
 	</main>
 	<footer class="container">
